--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.Repository/NGnono.FinancialManagement.Repository.csproj
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.Repository/NGnono.FinancialManagement.Repository.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contract\ICustomerRepository.cs" />
     <Compile Include="Contract\IBillRepository.cs" />
     <Compile Include="Contract\IRepository.cs" />
     <Compile Include="Contract\IUserRepository.cs" />
