--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.Models/NGnono.FinancialManagement.Models.csproj
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.Models/NGnono.FinancialManagement.Models.csproj
@@ -41,9 +41,10 @@
   <ItemGroup>
     <Compile Include="Enums\BillSortOrder.cs" />
     <Compile Include="Enums\BillType.cs" />
-    <Compile Include="Enums\Class1.cs" />
+    <Compile Include="Enums\AccountType.cs" />
     <Compile Include="Enums\CustomerSortOrder.cs" />
     <Compile Include="Enums\DataStatus.cs" />
+    <Compile Include="Enums\SourceType.cs" />
     <Compile Include="Filters\BillFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserModel.cs" />
