--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.Services/NGnono.FinancialManagement.Services.csproj
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.Services/NGnono.FinancialManagement.Services.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,8 +43,11 @@
     <Compile Include="Contract\IUserService.cs" />
     <Compile Include="Contract\IUserAccountService.cs" />
     <Compile Include="Impl\BaseService.cs" />
-    <Compile Include="Impl\Class1.cs" />
+    <Compile Include="Impl\UserService.cs" />
+    <Compile Include="Manager\ConfigManager.cs" />
+    <Compile Include="Manager\MapperManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\SecurityHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\NGnono.Framework\NGnono.Framework.Tools.ImageTools\NGnono.Framework.Tools.ImageTools.csproj">
