--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Web.config
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Web.config
@@ -16,7 +16,8 @@
   <unity configSource="Configurations\unity.config" />
 
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-NGnono.FinancialManagement.WebSite4Mobile-20130214102325;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-NGnono.FinancialManagement.WebSite4Mobile-20130214102325.mdf" />
+    <add name="NGnonoFMContext" connectionString="Data Source=.;Initial Catalog=NGnonoFM;Persist Security Info=True;User ID=ngfm;Password=!QA2ws;MultipleActiveResultSets=True"
+        providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
