--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Web.config
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Web.config
@@ -56,6 +56,11 @@
     </sessionState>
   </system.web>
 
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
+    <directoryBrowse enabled="true"/>
+  </system.webServer>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
