--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSiteCore/NGnono.FinancialManagement.WebSiteCore.csproj
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSiteCore/NGnono.FinancialManagement.WebSiteCore.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
@@ -55,6 +56,8 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BillController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Manager\MapperManager.cs" />
+    <Compile Include="Models\Dto\Bill\BillVo.cs" />
     <Compile Include="Models\Dto\Bill\IndexDto.cs" />
     <Compile Include="Models\Vo\AccountModels.cs" />
     <Compile Include="Models\BaseDto.cs" />
