--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.Data/NGnono.FinancialManagement.Data.csproj
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.Data/NGnono.FinancialManagement.Data.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Models\Mapping\NotificationLogMap.cs" />
     <Compile Include="Models\Mapping\OutsiteUserMap.cs" />
     <Compile Include="Models\Mapping\PointHistoryMap.cs" />
+    <Compile Include="Models\Mapping\PriceSettingMap.cs" />
     <Compile Include="Models\Mapping\ProductMap.cs" />
     <Compile Include="Models\Mapping\ProductStageMap.cs" />
     <Compile Include="Models\Mapping\ProductUploadJobMap.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="Models\NotificationLog.cs" />
     <Compile Include="Models\OutsiteUser.cs" />
     <Compile Include="Models\PointHistory.cs" />
+    <Compile Include="Models\PriceSetting.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductStage.cs" />
     <Compile Include="Models\ProductUploadJob.cs" />
