--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Web.config
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Web.config
@@ -43,6 +43,10 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <httpModules>
+      <add name="GlobalErrorHandlerModule" type="NGnono.Framework.Web.HttpModules.GlobalErrorHandlerModule, NGnono.Framework, Version=1.0.0.0, Culture=neutral" />
+      <add name="RequstLogging" type="NGnono.Framework.Web.HttpModules.RequestLogginHttpModule, NGnono.Framework, Version=1.0.0.0, Culture=neutral" />
+    </httpModules>
     <!--
             If you are deploying to a cloud environment that has multiple web server instances,
             you should change session state mode from "InProc" to "Custom". In addition,
@@ -57,10 +61,17 @@
   </system.web>
 
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true" />
     <directoryBrowse enabled="true"/>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true">
+      <add name="RequstLogging" type="NGnono.Framework.Web.HttpModules.RequestLogginHttpModule,NGnono.Framework" />
+      <add name="GlobalErrorHandlerModule" type="NGnono.Framework.Web.HttpModules.GlobalErrorHandlerModule,NGnono.Framework" />
+    </modules>
+    <handlers>
+      <add name="MVC_Routing" path="*.*" verb="*" modules="IsapiModule" scriptProcessor="C:\Windows\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" resourceType="Unspecified" requireAccess="Script" preCondition="classicMode,runtimeVersionv4.0,bitness64" />
+    </handlers>
   </system.webServer>
-  
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
