--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSiteCore/NGnono.FinancialManagement.WebSiteCore.csproj
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSiteCore/NGnono.FinancialManagement.WebSiteCore.csproj
@@ -52,7 +52,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BillController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -68,6 +67,8 @@
     <Compile Include="Models\BaseVo.cs" />
     <Compile Include="Models\Dto\Account\LoginDto.cs" />
     <Compile Include="Models\Vo\ProductViewModel.cs" />
+    <Compile Include="Models\Vo\StdHeaderViewModel.cs" />
+    <Compile Include="Models\Vo\StoreViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DateTimeUtil.cs" />
   </ItemGroup>
