--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/NGnono.FinancialManagement.WebSite4Mobile.csproj
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/NGnono.FinancialManagement.WebSite4Mobile.csproj
@@ -202,6 +202,9 @@
     <Content Include="css\jqm\themes\default\jquery.mobile.structure-1.3.0.min.css" />
     <Content Include="css\jqm\themes\default\jquery.mobile.theme-1.3.0.css" />
     <Content Include="css\jqm\themes\default\jquery.mobile.theme-1.3.0.min.css" />
+    <Content Include="css\mobiscroll.custom-2.5.0.min.css" />
+    <Content Include="css\wp_icons.png" />
+    <Content Include="css\wp_icons_light.png" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Configurations\Log4Net.config">
@@ -221,6 +224,7 @@
     <Content Include="js\base\jquery.js" />
     <Content Include="js\widgets\jquery.mobile-1.3.0.js" />
     <Content Include="js\widgets\jquery.mobile-1.3.0.min.js" />
+    <Content Include="js\widgets\mobiscroll.custom-2.5.0.min.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.js" />
@@ -263,6 +267,10 @@
     <Content Include="Views\Bill\Index.cshtml" />
     <Content Include="Views\Bill\Create.cshtml" />
     <Content Include="Views\Shared\_StdHeaderPartial.cshtml" />
+    <Content Include="Views\Shared\Success.cshtml" />
+    <Content Include="Views\Tag\Create.cshtml" />
+    <Content Include="Views\Tag\Update.cshtml" />
+    <Content Include="Views\Tag\UpdateList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -271,6 +279,14 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\NGnono.Framework\NGnono.Framework\NGnono.Framework.csproj">
+      <Project>{ac5ac3e2-09f3-4682-ab40-7a70bc4430c1}</Project>
+      <Name>NGnono.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NGnono.FinancialManagement.Data\NGnono.FinancialManagement.Data.csproj">
+      <Project>{55ccba5f-4a1c-40bd-acd7-0944e6bbb59b}</Project>
+      <Name>NGnono.FinancialManagement.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NGnono.FinancialManagement.WebSiteCore\NGnono.FinancialManagement.WebSiteCore.csproj">
       <Project>{a85edb8f-2266-4b5f-9ad5-c84617c54152}</Project>
       <Name>NGnono.FinancialManagement.WebSiteCore</Name>
