--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSiteCore/NGnono.FinancialManagement.WebSiteCore.csproj
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSiteCore/NGnono.FinancialManagement.WebSiteCore.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\StatisticsController.cs" />
+    <Compile Include="Controllers\TagController.cs" />
     <Compile Include="Manager\MapperManager.cs" />
     <Compile Include="Models\Dto\Product\DetailsDto.cs" />
     <Compile Include="Models\Requests\Product\ProductRequest.cs" />
@@ -69,6 +70,8 @@
     <Compile Include="Models\Vo\ProductViewModel.cs" />
     <Compile Include="Models\Vo\StdHeaderViewModel.cs" />
     <Compile Include="Models\Vo\StoreViewModel.cs" />
+    <Compile Include="Models\Vo\SuccessViewModel.cs" />
+    <Compile Include="Models\Vo\TagViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DateTimeUtil.cs" />
   </ItemGroup>
