--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/NGnono.FinancialManagement.WebSite4Mobile.csproj
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/NGnono.FinancialManagement.WebSite4Mobile.csproj
@@ -271,6 +271,7 @@
     <Content Include="Views\Tag\Create.cshtml" />
     <Content Include="Views\Tag\Update.cshtml" />
     <Content Include="Views\Tag\UpdateList.cshtml" />
+    <Content Include="Views\Bill\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
