--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/NGnono.FinancialManagement.WebSite4Mobile.csproj
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/NGnono.FinancialManagement.WebSite4Mobile.csproj
@@ -202,6 +202,8 @@
     <Content Include="css\jqm\themes\default\jquery.mobile.structure-1.3.0.min.css" />
     <Content Include="css\jqm\themes\default\jquery.mobile.theme-1.3.0.css" />
     <Content Include="css\jqm\themes\default\jquery.mobile.theme-1.3.0.min.css" />
+    <Content Include="css\jquery.mobile.pagination.css" />
+    <Content Include="js\widgets\jquery.mobile.pagination.js" />
     <Content Include="css\mobiscroll.custom-2.5.0.min.css" />
     <Content Include="css\wp_icons.png" />
     <Content Include="css\wp_icons_light.png" />
@@ -276,7 +278,7 @@
     <Content Include="Views\Shared\_FooterPartial.cshtml" />
     <Content Include="Views\Bill\AccountDate.cshtml" />
     <Content Include="Views\Shared\_JqMLayoutV2.cshtml" />
-    <Content Include="Views\Product\Index.cshtml" />
+    <Content Include="Views\Product\List.cshtml" />
     <Content Include="Views\Shared\_DefHeaderPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
