--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Web.config
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Web.config
@@ -15,16 +15,9 @@
   <!--<appSettings configSource="Configurations\appSettings.config" />-->
   <unity configSource="Configurations\unity.config" />
 
-  <connectionStrings>
-    <add name="NGnonoFMContext" connectionString="Data Source=.;Initial Catalog=NGnonoFM;Persist Security Info=True;User ID=ngfm;Password=!QA2ws;MultipleActiveResultSets=True"
-        providerName="System.Data.SqlClient" />
+  <connectionStrings configSource="Configurations\connectionStrings.config">
   </connectionStrings>
-  <appSettings>
-    <add key="webpages:Version" value="2.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="PreserveLoginUrl" value="true" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  <appSettings configSource="Configurations\appSettings.config">
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
