--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSiteCore/NGnono.FinancialManagement.WebSiteCore.csproj
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSiteCore/NGnono.FinancialManagement.WebSiteCore.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BillController.cs" />
+    <Compile Include="Controllers\BrandController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\StatisticsController.cs" />
