--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/NGnono.FinancialManagement.WebSite4Mobile.csproj
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/NGnono.FinancialManagement.WebSite4Mobile.csproj
@@ -202,7 +202,70 @@
     <Content Include="css\jqm\themes\default\jquery.mobile.structure-1.3.0.min.css" />
     <Content Include="css\jqm\themes\default\jquery.mobile.theme-1.3.0.css" />
     <Content Include="css\jqm\themes\default\jquery.mobile.theme-1.3.0.min.css" />
+    <Content Include="css\jqplot\jquery.jqplot.min.css" />
     <Content Include="css\jquery.mobile.pagination.css" />
+    <Content Include="js\widgets\jqplot\jquery.jqplot.js" />
+    <Content Include="js\widgets\jqplot\jquery.jqplot.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.barRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.barRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.BezierCurveRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.BezierCurveRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.blockRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.blockRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.bubbleRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.bubbleRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.canvasAxisLabelRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.canvasAxisLabelRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.canvasAxisTickRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.canvasAxisTickRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.canvasOverlay.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.canvasOverlay.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.canvasTextRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.canvasTextRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.categoryAxisRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.categoryAxisRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.ciParser.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.ciParser.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.cursor.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.cursor.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.dateAxisRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.dateAxisRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.donutRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.donutRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.dragable.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.dragable.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.enhancedLegendRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.enhancedLegendRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.funnelRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.funnelRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.highlighter.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.highlighter.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.json2.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.json2.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.logAxisRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.logAxisRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.mekkoAxisRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.mekkoAxisRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.mekkoRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.mekkoRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.meterGaugeRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.meterGaugeRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.mobile.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.mobile.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.ohlcRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.ohlcRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.pieRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.pieRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.pointLabels.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.pointLabels.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.pyramidAxisRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.pyramidAxisRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.pyramidGridRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.pyramidGridRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.pyramidRenderer.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.pyramidRenderer.min.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.trendline.js" />
+    <Content Include="js\widgets\jqplot\plugins\jqplot.trendline.min.js" />
     <Content Include="js\widgets\jquery.validate.unobtrusive.min.js" />
     <Content Include="js\widgets\jquery.mobile.pagination.js" />
     <Content Include="css\mobiscroll.custom-2.5.0.min.css" />
@@ -226,7 +289,7 @@
     <Content Include="js\c\storage.js" />
     <Content Include="js\widgets\cordova.webos-debug.js" />
     <Content Include="js\widgets\cordova.webos.js" />
-    <Content Include="js\base\jquery.js" />
+    <Content Include="js\base\jquery.min.js" />
     <Content Include="js\widgets\jquery.mobile-1.3.0.js" />
     <Content Include="js\widgets\jquery.mobile-1.3.0.min.js" />
     <Content Include="js\widgets\mobiscroll.custom-2.5.0.min.js" />
@@ -293,6 +356,7 @@
     <Content Include="Views\Brand\Update.cshtml" />
     <Content Include="Views\Brand\UpdateList.cshtml" />
     <Content Include="Views\Product\Update.cshtml" />
+    <Content Include="Views\Bill\Chart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
